// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`move-element-to-recycle-bin should handle moving a non-existent element 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"The content could not be found","status":404,"operationStatus":"NotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`move-element-to-recycle-bin should move an element to the recycle bin 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;
